GamePresenter reworked